Logo still a work in progress

--- a/Service4U/app/src/main/res/values/strings.xml
+++ b/Service4U/app/src/main/res/values/strings.xml
@@ -91,5 +91,5 @@
     <string name="admin">Administrator</string>
     <string name="service_provider">Service Provider</string>
     <string name="homeowner">Homeowner</string>
-    <string name="welcome">Welcome</string>
+    <string name="welcome">Welcome to S4U</string>
 </resources>
