--- a/Service4U/app/src/main/res/values/strings.xml
+++ b/Service4U/app/src/main/res/values/strings.xml
@@ -99,5 +99,7 @@
     <string name="address_title_text">Address (required for homeowners)</string>
     <string name="first_name">First name</string>
     <string name="last_name">Last name</string>
+    <string name="users">Users:</string>
+    <string name="password_hint">at least 6 characters</string>
 
 </resources>
