restrict services to admins

--- a/Service4U/app/src/main/res/values/strings.xml
+++ b/Service4U/app/src/main/res/values/strings.xml
@@ -107,5 +107,7 @@
     <string name="services">Services</string>
     <string name="delete">Delete</string>
     <string name="update">update</string>
+    <string name="book_job">Book Service</string>
+    <string name="my_jobs">My Jobs</string>
 
 </resources>
