made service type a drowdown

--- a/Service4U/app/src/main/res/values/strings.xml
+++ b/Service4U/app/src/main/res/values/strings.xml
@@ -115,6 +115,7 @@
         <item>Logistics</item>
         <item>IT</item>
         <item>Cable/Internet</item>
+        <item>Misc</item>
     </string-array>
 
 </resources>
