service providers can update availability

--- a/Service4U/app/src/main/res/values/strings.xml
+++ b/Service4U/app/src/main/res/values/strings.xml
@@ -114,6 +114,7 @@
     <string name="please_signin">Please sign in OR create a new account</string>
     <string name="my_availability">My Availability</string>
     <string name="my_services">My Services</string>
+    <string name="update_availability">Update Availability</string>
 
     <string-array name="service_type_array">
         <item>Painting</item>
@@ -121,6 +122,36 @@
         <item>IT</item>
         <item>Cable/Internet</item>
         <item>Misc</item>
+    </string-array>
+
+    <string-array name="time_slots">
+        <item>06:00</item>
+        <item>06:30</item>
+        <item>07:00</item>
+        <item>07:30</item>
+        <item>08:00</item>
+        <item>08:30</item>
+        <item>09:00</item>
+        <item>09:30</item>
+        <item>10:00</item>
+        <item>10:30</item>
+        <item>11:00</item>
+        <item>11:30</item>
+        <item>12:00</item>
+        <item>12:30</item>
+        <item>13:00</item>
+        <item>13:30</item>
+        <item>14:00</item>
+        <item>14:30</item>
+        <item>15:00</item>
+        <item>15:30</item>
+        <item>16:00</item>
+        <item>16:30</item>
+        <item>17:00</item>
+        <item>17:30</item>
+        <item>18:00</item>
+        <item>18:30</item>
+        <item>19:00</item>
     </string-array>
 
 </resources>
