--- a/Service4U/app/src/main/res/values/strings.xml
+++ b/Service4U/app/src/main/res/values/strings.xml
@@ -116,6 +116,10 @@
     <string name="my_services">My Services</string>
     <string name="update_availability">Update Availability</string>
     <string name="back">Back</string>
+    <string name="morning">morning</string>
+    <string name="afternoon">afternoon</string>
+    <string name="evening">evening</string>
+    <string name="find_a_provider">find a service provider</string>
 
     <string-array name="service_type_array">
         <item>Cable/Internet</item>
@@ -163,5 +167,15 @@
         <item>18:30</item>
         <item>19:00</item>
     </string-array>
+
+
+    <string-array name="urgency_array">
+        <item>24 hours</item>
+        <item>1 week</item>
+        <item>2 weeks</item>
+        <item>1 month</item>
+        <item>3 months</item>
+    </string-array>
+
 
 </resources>
