--- a/Service4U/app/src/main/res/values/strings.xml
+++ b/Service4U/app/src/main/res/values/strings.xml
@@ -176,6 +176,8 @@
         <item>1 month</item>
         <item>3 months</item>
     </string-array>
+    <string name="title_activity_job_options">JobOptionsActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 
 
 </resources>
