--- a/Service4U/app/src/main/res/values/strings.xml
+++ b/Service4U/app/src/main/res/values/strings.xml
@@ -107,7 +107,8 @@
     <string name="services">Services</string>
     <string name="delete">Delete</string>
     <string name="update">update</string>
-    <string name="book_job">Book Service</string>
+    <string name="book_service">Book Service</string>
+    <string name="book_job">Book Job</string>
     <string name="my_jobs">My Jobs</string>
     <string name="edit_account">Edit account details</string>
     <string name="main_page">main page</string>
@@ -176,7 +177,9 @@
         <item>1 month</item>
         <item>3 months</item>
     </string-array>
-    <string name="title_activity_job_options">JobOptionsActivity</string>
+
+
+    <string name="title_activity_job_options">Booking Options</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
 
