job options are displayed in tabbed activity

--- a/Service4U/app/src/main/res/values/strings.xml
+++ b/Service4U/app/src/main/res/values/strings.xml
@@ -178,6 +178,13 @@
         <item>3 months</item>
     </string-array>
 
+    <string-array name="times_array">
+        <item>06:00</item>
+        <item>11:00</item>
+        <item>16:00</item>
+        <item>19:00</item>
+    </string-array>
+
 
     <string name="title_activity_job_options">Booking Options</string>
     <string name="section_format">Hello World from section: %1$d</string>
