--- a/Service4U/app/src/main/res/values/strings.xml
+++ b/Service4U/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
 
     <string name="firebase_status_fmt">Firebase User: %s</string>
     <string name="firebase_user_management">Firebase User Management</string>
-    <string name="meta_firebase_ui">Date Account was created: %s</string>
+    <string name="meta_firebase_ui">Date account was created: %s</string>
     <string name="google_status_fmt">Google User: %s</string>
     <string name="google_title_text">Google Sign In</string>
 
@@ -102,7 +102,7 @@
     <string name="users">Users:</string>
     <string name="password_hint">at least 6 characters</string>
     <string name="start">Start</string>
-    <string name="title_activity_services">ServicesActivity</string>
+    <string name="title_activity_services">Services Offered</string>
     <string name="done">Done</string>
     <string name="services">Services</string>
     <string name="delete">Delete</string>
